--- a/YouTubeVideoViewer/package.json
+++ b/YouTubeVideoViewer/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
+    "@testing-library/react-native": "^13.0.0",
     "axios": "^1.7.9",
     "expo": "~52.0.23",
     "expo-status-bar": "~2.0.0",
+    "jest": "^29.7.0",
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-gesture-handler": "^2.21.2",
@@ -25,8 +27,17 @@
     "react-native-webview": "^13.12.5",
     "react-native-youtube-iframe": "^2.3.0"
   },
+  
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.26.0",
+    "babel-jest": "^29.7.0",
+    "metro-react-native-babel-preset": "^0.77.0",
+    "react-test-renderer": "^18.3.1"
   },
   "private": true
+
+  
 }
